Formatted the code and implemented scaling of thumbnails
Formatted the code and implemented scaling of thumbnails